--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,19 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
+    <h1 class="post-title">{{ page.title }}</h1>
+    <span class="post-date">{{ page.date | date_to_string }}</span>
+    {% if page.tags %}
+      {% for tag in page.tags %}
+      <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">
+          {{ tag }} 
+      </a>
+      {% endfor %}
+    {% endif %}
+    <br/><br/>
+    {{ content }}
 </div>
+
 
 {% if site.related_posts.size >= 1 %}
 <div class="related">
