--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -556,3 +556,25 @@ a.pagination-item:hover {
 .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
   box-shadow: -.25rem 0 .5rem rgba(0,0,0,.1);
 }
+
+.post-tag {
+  display: inline-block;
+  background: #268bd2;
+  padding: 0 .5rem;
+  margin-right: .5rem;
+  border-radius: 4px;
+  color: #ffffff;
+  font-family: $font-sans;
+  font-size: 90%;
+  &:before {
+    content: "\f02b";
+    font-family: "PT Sans", Helvetica, Arial, sans-serif;
+    padding-right: .5em;
+  }
+  &:hover {
+    text-decoration: none;
+    background: #268bd2;
+    color: $white;
+  }
+  @include transition(all .1s ease-in-out);
+}
